// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewToDo renders 1`] = `
<div
  className="list"
>
  <h1
    className="list__header"
  >
    todos
  </h1>
  <NewToDo
    submit={[Function]}
  />
</div>
`;

exports[`NewToDo renders a list of to dos based on state.toDos 1`] = `
<div
  className="list"
>
  <h1
    className="list__header"
  >
    todos
  </h1>
  <NewToDo
    submit={[Function]}
  />
  <ToDo
    complete={false}
    deleteToDo={[Function]}
    text="One"
    toggleCompletion={[Function]}
  />
</div>
`;
